--- a/app/src/main/res/layout/activity_book_consultation.xml
+++ b/app/src/main/res/layout/activity_book_consultation.xml
@@ -2,47 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="@color/colorWhite">
+    android:padding="16dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Записаться на консультацию"
-        android:textSize="24sp"
-        android:textColor="@color/colorPrimary"
         android:layout_gravity="center_horizontal"
-        android:paddingBottom="16dp"/>
+        android:paddingBottom="16dp"
+        android:text="Записаться на консультацию"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/editText_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ваше имя"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:hint="Ваше имя" />
 
     <EditText
         android:id="@+id/editText_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ваш email"
         android:layout_marginBottom="16dp"
-        android:inputType="textEmailAddress"/>
+        android:hint="Ваш email"
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/editText_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ваш телефон"
         android:layout_marginBottom="16dp"
-        android:inputType="phone"/>
+        android:hint="Ваш телефон"
+        android:inputType="phone" />
 
     <Button
         android:id="@+id/button_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Отправить"
         android:backgroundTint="@color/colorPrimary"
-        android:textColor="@color/colorWhite"/>
+        android:text="Отправить"
+        android:textColor="@color/colorWhite" />
 </LinearLayout>
