--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorGray">#BDBDBD</color>
     <color name="colorTextPrimary">#212121</color>
     <color name="colorTextSecondary">#757575</color>
+    <color name="colorGrayLight">#D3D3D3</color>
+    <color name="colorGrayDark">#808080</color>
 </resources>
